FusionForge-5.3:
* Widget: MyArtifacts Enhancement : add monitored artifacts (TrivialDev)
* Trackers: Attachements moved to filesystem to allow larger attachments & reduce DB size (Alcatel-Lucent)
* Docman: Files moves to filesystem using the Storage generic class (TrivialDev)
* Users: notify admins when user has validated his account (TrivialDev)
* Allow project to disable the Project Activity (Alcatel-Lucent)
* User: account ssh key management: rewrite backend, add more informations such as
        fingerprint, deploy flag, easy delete (TrivialDev)
* Docman: Directory monitoring (TrivialDev)
* Activity: New Directory appears now in activity (TrivialDev)
* Docman: Display number of download per file, max upload size (TrivialDev)
* Widget: Project Document Activity : new or updates files, new directories, in the last 4 weeks (TrivialDev)

Plugins:
* headermenu: new plugin to handle links in headermenu or outermenu (TrivialDev)
* scmgit: add browsing capability for user personal repository (TrivialDev)
* scmgit: basic activity support (TrivialDev).
* scmhg: merge patch from Denise Patzker: add http support, online browse, stats (TrivialDev)
* webanalytics: new plugin to add support for piwik or google analytics tool (TrivialDev)
* scmhook: Support added for pre-revprop-changehooks to change properties (Alcatel-Lucent)
* scmhook: Add commitEmail support for scmhg plugin (TrivialDev)
* new admssw plugin to provide ADMS.SW compatible RDF descriptions of projects 


FusionForge-5.2:
* Docman: inject zip as a tree (Capgemini)
* Widget: New User Widget: Last 5 documents published in my project (Capgemini)
* Docman: mass action (Capgemini)
* New Message plugin to display global messages like planned upgrade or outage
  (Alcatel-Lucent).
* Docman: complete rewritten of trash and pending view (Capgemini)
* New Scmhook: complete library to handle hooks for any scm available in
  fusionforge. Currently supporting post-commit and pre-commit hook.